# mcfind

./: README.md  pyproject.toml
src/mcfind/: __main__.py  biomes.py  chatgpt.py  cli.py  coords.py  errors.py  mcp_bridge.py  mcp_server.py  models.py  output.py  profiles.py  region_versions.py  runtime.py  save_import.py  structures.py  versioning.py
src/mcfind/backends/: base.py  cubiomes.py  cubiomes_native.py
src/mcfind/native/: mcfind_cubiomes.c
tests/: test_backend_smoke.py  test_biomes.py  test_chatgpt.py  test_mcp_bridge.py  test_profiles.py  test_save_import.py  test_versioning.py
