[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcfind"
version = "0.1.0"
description = "Agent-first offline Minecraft Java structure lookup CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.26.0",
  "nbtlib>=2.0.4",
]

[project.scripts]
mcfind = "mcfind.cli:main"
mcfind-mcp = "mcfind.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
